[package]
name = "varlociraptor"
version = "1.0.2-alpha.0"
authors = ["Johannes Köster <johannes.koester@tu-dortmund.de>", "David Lähnemann <david.laehnemann@uni-duesseldorf.de>"]
description = "A library for calling of genomic variants using a latent variable model."
repository = "https://github.com/varlociraptor/varlociraptor"
readme = "README.md"
license = "GPL-3.0"
include = ["src/**/*", "Cargo.toml", "CHANGELOG.md", "README.md", "LICENSE", "templates/*"]
edition = "2018"

[dependencies]
bio = "0.26"
bio-types = "0.4"
log = "0.3"
rust-htslib = "0.23"
GSL = "1.0"
itertools = "0.8"
itertools-num = "0.1"
approx = "0.3"
rusty-machine="0.4"
ordered-float = "1.0"
ndarray = "0.6"
quick-error = "1.2"
vec_map = "0.8"
regex = "1"
serde = "1"
serde_derive = "1"
serde_json = "1.0"
serde_yaml = "0.8"
csv = "1.0.0-beta.5"
lazy_static = "0.2"
cached = "0.7.0"
statrs = "0.9"
clap = {version = "2.24", features = ["yaml", "color", "suggestions"]}
structopt = "0.2"
strum = "0.13"
strum_macros = "0.13"
rand = "0.4"
derive_builder = "0.7"
fern = "0.4"
time = "0.1"
counter = "0.4"
custom_error = "1.6"
askama = "0.8"
yaml-rust = "0.4"
tempfile = "3.0"
eval = "0.4"
rayon = "1.0"
petgraph = "0.4"
derive-new = "0.5"
pest = "2.1"
pest_derive = "2.1"
getset = "0.0.7"

[dev-dependencies]
env_logger = "0.3"
flate2 = "0.2"
hyper = "0.10"
ftp = "3.0"
serde_json = "1"

[features]
default = []
gslv2 = ["GSL/v2"]
