[package]
name = "varlociraptor"
version = "1.6.5-alpha.0"
authors = ["Johannes Köster <johannes.koester@tu-dortmund.de>", "David Lähnemann <david.laehnemann@uni-duesseldorf.de>"]
description = "A library for calling of genomic variants using a latent variable model."
repository = "https://github.com/varlociraptor/varlociraptor"
readme = "README.md"
license = "GPL-3.0"
include = ["src/**/*", "Cargo.toml", "CHANGELOG.md", "README.md", "LICENSE", "templates/*"]
edition = "2018"

[dependencies]
bio = "0.30"
bio-types = "0.5"
log = "0.4"
rust-htslib = "0.27"
GSL = "1"
itertools = "0.8"
itertools-num = "0.1"
approx = "0.3"
rusty-machine="0.5"
ordered-float = "1"
ndarray = "0.13"
vec_map = "0.8"
regex = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_yaml = "0.8"
csv = "1"
lazy_static = "1"
cached = "0.9"
statrs = "0.11"
clap = {version = "2", features = ["yaml", "color", "suggestions"]}
structopt = "0.3"
strum = "0.16"
strum_macros = "0.16"
rand = "0.7"
derive_builder = "0.9"
fern = "0.5"
time = "0.1"
counter = "0.4"
snafu = "0.5"
askama = "0.8"
yaml-rust = "0.4"
tempfile = "3"
eval = "0.4"
rayon = "1"
petgraph = "0.4"
derive-new = "0.5"
pest = "2"
pest_derive = "2"
getset = "0.0.8"
half = { version = "1.4", features = ["serde"] }
bincode = "1.2"
bv = "0.11"
shrinkwraprs = "0.2.3"
byteorder = "1.3"
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
env_logger = "0.3"
flate2 = "0.2"
hyper = "0.10"
ftp = "3.0"
serde_json = "1"

[features]
default = []
gslv2 = ["GSL/v2"]
use-intrinsics = ["half/use-intrinsics"]
